--- a/src/css/style.css
+++ b/src/css/style.css
@@ -43,6 +43,8 @@ ul.filter-select {
       background: #d1d6d9; }
     ul.filter-select li button:hover {
       background: #dfe3e4; }
+    ul.filter-select li button.selected {
+      background: #d1d6d9; }
   ul.filter-select li:before {
     display: none; }
 
@@ -78,3 +80,9 @@ ul.filter-select {
   max-height: 200px;
   vertical-align: middle;
   box-shadow: 0 0 4px 0 rgba(0, 0, 0, 0.2); }
+
+ul.filter-select button:hover:after,
+ul.filter-select button.selected:after,
+li:last-child ul.filter-select button:after {
+  filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=0);
+  opacity: 0; }
