--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -112,3 +112,10 @@ li:last-child ul.filter-select button:after {
     filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=0);
     opacity: 0;
 }
+
+#searchbox {
+    padding-left: 5px;
+    border-radius: 3px;
+    margin-left: 5px;
+    margin-right: 5px;
+}
